Fix(picture viewer): fix some layout issues.  File picker was also only working when selecting jpg file.

--- a/src/components/picture-viewer/picture-viewer.scss
+++ b/src/components/picture-viewer/picture-viewer.scss
@@ -1,18 +1,18 @@
 picture-viewer {
   .selected-picture {
     width: 100%;
-    height: 100%;
+    height: 80%;
+    padding: 5px;
+    padding: 5px;
     object-fit: contain;
+  }
+
+  .div-selected-picture {
+    height: 100%;
   }
 
   .footer-button-camera {
     margin-left: 10px;
     font-size: 1.5em;
   }
-}
-
-.selected-picture {
-  width: 100%;
-  height: 100%;
-  object-fit: contain;
 }
