--- a/src/pages/intervention-implantation-plan/intervention-implantation-plan.scss
+++ b/src/pages/intervention-implantation-plan/intervention-implantation-plan.scss
@@ -1,3 +1,5 @@
 page-intervention-implantation-plan {
-
+  ion-header {
+    z-index: 9999;
+  }
 }
